tests/cases/compiler-development/artifact/errors/diagnostic-generic-enum-constructor-mismatch.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected std::Option[i64], got std::Option[bool]" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-enum-constructor-mismatch.ari" display="tests/cases/generics/errors/generic-enum-constructor-mismatch.ari" bytes=78
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-enum-constructor-mismatch.ari" line=2 column=28 end_line=2 end_column=32 byte_start=46 byte_end=50 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-enum-constructor-mismatch.ari:2:28\n   |\n 2 |   let value: Option[i64] = Some<bool>(true);\n   |                            ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-enum-constructor-mismatch.ari" line=2 column=7 end_line=2 end_column=12 byte_start=25 byte_end=30 message="binding 'value' expects std::Option[i64]"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-enum-constructor-mismatch.ari:2:7\n   |\n 2 |   let value: Option[i64] = Some<bool>(true);\n   |       ^^^^^"
  Note index=0 location=none message="assignment values are checked against the target type after expression coercions"
  Help index=0 location=none message="assign a value of type std::Option[i64] or change the target type"
